fix: desc text align

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -42,3 +42,7 @@ body {
   font-size: 2.6rem;
   vertical-align: middle;
 }
+
+.desc {
+  text-align: center;
+}
